corrige e atualiza e-mail de contato, adiciona funcionalidade de seleção de tamanhos e compra de produtos com animação de hover

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         "addressRegion": "SP"
       },
       "telephone": "+5517982126171",
-      "email": "guimatheus001btos@gmail.com"
+      "email": "guimateus001btos@gmail.com"
     }
     </script>
 </head>
@@ -259,7 +259,7 @@
           <div class="social-links">
             <a href="https://instagram.com/personalgui_matheus" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://wa.me/5517982126171" target="_blank"><i class="fab fa-whatsapp"></i></a>
-            <a href="mailto:guimatheus001btos@gmail.com"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:guimateus001btos@gmail.com"><i class="fas fa-envelope"></i></a>
           </div>
         </div>
         <div class="footer-section">
@@ -269,6 +269,9 @@
             <li><a href="servicos.html">Serviços</a></li>
             <li><a href="produtos.html">Produtos</a></li>
             <li><a href="depoimentos.html">Depoimentos</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
+            <li><a href="dicas.html">Dicas</a></li>
+            <li><a href="faq.html">Dúvidas</a></li>
           </ul>
         </div>
         <div class="footer-section">
@@ -276,7 +279,7 @@
           <div class="contact-info">
             <p><i class="fas fa-map-marker-alt"></i> Barretos - SP</p>
             <p><i class="fas fa-phone"></i> (17) 98212-6171</p>
-            <p><i class="fas fa-envelope"></i> guimatheus001btos@gmail.com</p>
+            <p><i class="fas fa-envelope"></i> guimateus001btos@gmail.com</p>
           </div>
         </div>
         <div class="footer-section">
