atualiza ano de copyright para 2025 em várias páginas e ajusta estilos de texto

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <div class="testimonials-grid">
         <div class="testimonial-card">
           <div class="testimonial-content">
-            <p>"Perdi 15kg em 4 meses com o Gui! Profissional incrível que realmente se importa with os resultados dos
+            <p>"Perdi 15kg em 4 meses com o Gui! Profissional incrível que realmente se importa com os resultados dos
               alunos."</p>
           </div>
           <div class="testimonial-author">
@@ -259,7 +259,7 @@
           <div class="social-links">
             <a href="https://instagram.com/personalgui_matheus" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://wa.me/5517982126171" target="_blank"><i class="fab fa-whatsapp"></i></a>
-            <a href="mailto:guimateus001btos@gmail.com"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:guimateus001btos@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
           </div>
         </div>
         <div class="footer-section">
@@ -292,7 +292,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2024 Guilherme Matheus Personal Trainer. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Guilherme Matheus Personal Trainer. Todos os direitos reservados.</p>
         <p>Desenvolvido por <a href="https://gbconnect.digital" target="_blank">gbconnect.digital</a></p>
       </div>
     </div>
