fix: add images and adjust size

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="hero-image">
-          <img src="images/gui-hero.jpg" alt="Guilherme Matheus Personal Trainer" class="hero-img">
+          <img src="images/gui-hero.png" alt="Guilherme Matheus Personal Trainer" class="hero-img">
         </div>
       </div>
     </div>
