--- a/servicos.html
+++ b/servicos.html
@@ -423,53 +423,43 @@
         <div class="footer-section">
           <img src="images/logo.png" alt="Guilherme Matheus" class="footer-logo">
           <p>Transformando vidas através do movimento. Treinos que fortalecem corpo e mente, criando hábitos
-            sustentáveis
-            para uma vida mais saudável.</p>
+            sustentáveis para uma
+            vida mais saudável.</p>
           <div class="social-links">
             <a href="https://instagram.com/personalgui_matheus" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://wa.me/5517982126171" target="_blank"><i class="fab fa-whatsapp"></i></a>
-            <a href="mailto:guimatheus001btos@gmail.com"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:guimateus001btos@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
           </div>
         </div>
-
         <div class="footer-section">
           <h4>Navegação</h4>
           <ul>
-            <li><a href="index.html">Início</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="servicos.html">Serviços</a></li>
             <li><a href="produtos.html">Produtos</a></li>
             <li><a href="depoimentos.html">Depoimentos</a></li>
             <li><a href="galeria.html">Galeria</a></li>
             <li><a href="dicas.html">Dicas</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="faq.html">Dúvidas</a></li>
           </ul>
         </div>
-
-        <div class="footer-section">
-          <h4>Serviços</h4>
-          <ul>
-            <li>Personal Training Presencial</li>
-            <li>Consultoria Online</li>
-            <li>Plano Hipertrofia</li>
-            <li>Plano Emagrecimento</li>
-            <li>Avaliação Física</li>
-            <li>Treino em Grupo</li>
-          </ul>
-        </div>
-
         <div class="footer-section">
           <h4>Contato</h4>
           <div class="contact-info">
-            <p><i class="fas fa-map-marker-alt"></i> Barretos, SP</p>
-            <p><i class="fab fa-whatsapp"></i> (17) 98212-6171</p>
-            <p><i class="fas fa-envelope"></i> guimatheus001btos@gmail.com</p>
-            <p><i class="fas fa-clock"></i> Seg-Sex: 6h-22h | Sáb: 7h-12h</p>
+            <p><i class="fas fa-map-marker-alt"></i> Barretos - SP</p>
+            <p><i class="fas fa-phone"></i> (17) 98212-6171</p>
+            <p><i class="fas fa-envelope"></i> guimateus001btos@gmail.com</p>
+          </div>
+        </div>
+        <div class="footer-section">
+          <h4>Horário de Atendimento</h4>
+          <div class="schedule">
+            <p>Segunda a Sexta: 06:00 - 22:00</p>
+            <p>Sábado: 08:00 - 18:00</p>
+            <p>Domingo: 08:00 - 12:00</p>
           </div>
         </div>
       </div>
-
       <div class="footer-bottom">
         <p>&copy; 2025 Guilherme Matheus Personal Trainer. Todos os direitos reservados.</p>
         <p>Desenvolvido por <a href="https://gbconnect.digital" target="_blank">gbconnect.digital</a></p>
@@ -477,13 +467,14 @@
     </div>
   </footer>
 
-  <!-- WhatsApp Float -->
+  <!-- WhatsApp Float Button -->
   <div class="whatsapp-float">
     <a href="https://wa.me/5517982126171?text=Olá! Vim do site e gostaria de mais informações!" target="_blank">
       <i class="fab fa-whatsapp"></i>
     </a>
   </div>
 
+  <!-- Scripts -->
   <script src="js/script.js"></script>
 </body>
 
