fix: position cads page services and style functions

--- a/servicos.html
+++ b/servicos.html
@@ -63,14 +63,13 @@
       <div class="services-grid">
         <!-- Serviço 1: Personal Training Presencial -->
         <div class="service-card featured">
+          <div class="service-badge">Mais Popular</div>
+
           <div class="service-header">
             <div class="service-icon">
               <i class="fas fa-dumbbell"></i>
             </div>
-            <div>
-              <h3 class="service-title">Personal Training Presencial</h3>
-              <span class="service-badge">Mais Popular</span>
-            </div>
+            <h3 class="service-title">Personal Training Presencial</h3>
           </div>
 
           <div class="service-description">
