--- a/depoimentos.html
+++ b/depoimentos.html
@@ -635,98 +635,65 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-section">
-          <div class="footer-logo">
-            <img src="images/logo-white.png" alt="Guilherme Matheus Personal Trainer">
-          </div>
-          <p class="footer-desc">Transformando vidas através do fitness com metodologia personalizada e acompanhamento
-            completo em Barretos SP.</p>
-          <div class="social-links">
-            <a href="https://instagram.com/personalgui_barretos" target="_blank" aria-label="Instagram">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://wa.me/5517982126171" target="_blank" aria-label="WhatsApp">
-              <i class="fab fa-whatsapp"></i>
-            </a>
-            <a href="https://facebook.com/personalgui" target="_blank" aria-label="Facebook">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="https://youtube.com/@personalgui" target="_blank" aria-label="YouTube">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </div>
-        </div>
-
-        <div class="footer-section">
-          <h3>Navegação</h3>
-          <ul class="footer-links">
-            <li><a href="index.html">Início</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="servicos.html">Serviços</a></li>
-            <li><a href="produtos.html">Produtos</a></li>
-            <li><a href="depoimentos.html">Depoimentos</a></li>
-            <li><a href="galeria.html">Galeria</a></li>
-            <li><a href="dicas.html">Dicas</a></li>
-            <li><a href="contato.html">Contato</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-section">
-          <h3>Serviços</h3>
-          <ul class="footer-links">
-            <li><a href="servicos.html#personal-training">Personal Training</a></li>
-            <li><a href="servicos.html#consultoria-online">Consultoria Online</a></li>
-            <li><a href="servicos.html#treino-grupo">Treino em Grupo</a></li>
-            <li><a href="servicos.html#avaliacao-fisica">Avaliação Física</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-section">
-          <h3>Contato</h3>
-          <div class="contact-info">
-            <div class="contact-item">
-              <i class="fas fa-phone"></i>
-              <span>(17) 98212-6171</span>
-            </div>
-            <div class="contact-item">
-              <i class="fas fa-envelope"></i>
-              <span>contato@personalguibarretos.com.br</span>
-            </div>
-            <div class="contact-item">
-              <i class="fas fa-map-marker-alt"></i>
-              <span>Barretos - SP</span>
-            </div>
-            <div class="contact-item">
-              <i class="fas fa-clock"></i>
-              <span>Segunda a Sábado: 6h às 22h</span>
-            </div>
-          </div>
+<!-- Footer -->
+<footer class="footer">
+  <div class="container">
+    <div class="footer-content">
+      <div class="footer-section">
+        <img src="images/logo.png" alt="Guilherme Matheus" class="footer-logo">
+        <p>Transformando vidas através do fitness. Treinos personalizados para hipertrofia e emagrecimento em
+          Barretos-SP.</p>
+        <div class="social-links">
+          <a href="https://instagram.com/personalgui_matheus" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://wa.me/5517982126171" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <a href="mailto:guimateus001btos@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
         </div>
       </div>
-
-      <div class="footer-bottom">
-        <div class="footer-bottom-content">
-          <p>&copy; 2025 Guilherme Matheus Personal Trainer. Todos os direitos reservados.</p>
-          <div class="footer-bottom-links">
-            <a href="termos.html">Termos de Uso</a>
-            <a href="privacidade.html">Política de Privacidade</a>
-          </div>
+      <div class="footer-section">
+        <h4>Navegação</h4>
+        <ul>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="servicos.html">Serviços</a></li>
+          <li><a href="produtos.html">Produtos</a></li>
+          <li><a href="depoimentos.html">Depoimentos</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="dicas.html">Dicas</a></li>
+          <li><a href="faq.html">Dúvidas</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4>Contato</h4>
+        <div class="contact-info">
+          <p><i class="fas fa-map-marker-alt"></i> Barretos - SP</p>
+          <p><i class="fas fa-phone"></i> (17) 98212-6171</p>
+          <p><i class="fas fa-envelope"></i> guimateus001btos@gmail.com</p>
+        </div>
+      </div>
+      <div class="footer-section">
+        <h4>Horário de Atendimento</h4>
+        <div class="schedule">
+          <p>Segunda a Sexta: 06:00 - 22:00</p>
+          <p>Sábado: 08:00 - 18:00</p>
+          <p>Domingo: 08:00 - 12:00</p>
         </div>
       </div>
     </div>
-  </footer>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Guilherme Matheus Personal Trainer. Todos os direitos reservados.</p>
+      <p>Desenvolvido por <a href="https://gbconnect.digital" target="_blank">gbconnect.digital</a></p>
+    </div>
+  </div>
+</footer>
 
-  <!-- WhatsApp Float Button -->
-  <a href="https://wa.me/5517982126171?text=Olá! Vim pelo site e gostaria de mais informações sobre os serviços."
-    class="whatsapp-float" target="_blank" aria-label="Falar no WhatsApp">
+<!-- WhatsApp Float Button -->
+<div class="whatsapp-float">
+  <a href="https://wa.me/5517982126171?text=Olá! Vim do site e gostaria de mais informações!" target="_blank">
     <i class="fab fa-whatsapp"></i>
   </a>
+</div>
 
-  <script src="js/script.js"></script>
+<!-- Scripts -->
+<script src="js/script.js"></script>
 </body>
 
 </html>
