fix ajust contraste e metricas

--- a/galeria.html
+++ b/galeria.html
@@ -55,12 +55,12 @@
           <span class="stat-label">Transformações</span>
         </div>
         <div class="stat-item">
-          <span class="stat-number">95%</span>
+          <span class="stat-number">98%</span>
           <span class="stat-label">Taxa de Sucesso</span>
         </div>
         <div class="stat-item">
-          <span class="stat-number">5 Anos</span>
-          <span class="stat-label">de Experiência</span>
+          <span class="stat-number">3+</span>
+          <span class="stat-label">Anos de Experiência</span>
         </div>
       </div>
     </div>
