--- a/depoimentos.html
+++ b/depoimentos.html
@@ -69,7 +69,7 @@
           <div class="stat-label">Peso Perdido pelos Clientes</div>
         </div>
         <div class="stat-card">
-          <div class="stat-number">3</div>
+          <div class="stat-number">3+</div>
           <div class="stat-label">Anos de Experiência</div>
         </div>
       </div>
