--- a/galeria.html
+++ b/galeria.html
@@ -24,7 +24,7 @@
         </div>
         <div class="nav-menu" id="nav-menu">
           <ul class="nav-list">
-            <li><a href="#home" class="nav-link">Início</a></li>
+            <li><a href="index.html" class="nav-link">Início</a></li>
             <li><a href="sobre.html" class="nav-link">Sobre</a></li>
             <li><a href="servicos.html" class="nav-link">Serviços</a></li>
             <li><a href="produtos.html" class="nav-link">Produtos</a></li>
