fix button color and active tips

--- a/dicas.html
+++ b/dicas.html
@@ -30,7 +30,7 @@
             <li><a href="produtos.html" class="nav-link">Produtos</a></li>
             <li><a href="depoimentos.html" class="nav-link">Depoimentos</a></li>
             <li><a href="galeria.html" class="nav-link">Galeria</a></li>
-            <li><a href="dicas.html" class="nav-link"active>Dicas</a></li>
+            <li><a href="dicas.html" class="nav-link active">Dicas</a></li>
             <li><a href="faq.html" class="nav-link">FAQ</a></li>
             <li><a href="contato.html" class="nav-link">Contato</a></li>
           </ul>
