--- a/faq.html
+++ b/faq.html
@@ -817,61 +817,63 @@
   </section>
 
   <!-- Footer -->
+  <!-- Footer -->
   <footer class="footer">
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <div class="footer-brand">
-            <img src="images/logo.png" alt="Personal Trainer Guilherme Matheus" class="footer-logo">
-            <p>Transformando vidas através do exercício físico em Barretos e região.</p>
+          <img src="images/logo.png" alt="Guilherme Matheus" class="footer-logo">
+          <p>Transformando vidas através do movimento. Treinos que fortalecem corpo e mente, criando hábitos
+            sustentáveis para uma
+            vida mais saudável.</p>
+          <div class="social-links">
+            <a href="https://instagram.com/personalgui_matheus" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://wa.me/5517982126171" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="mailto:guimateus001btos@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
           </div>
         </div>
-
         <div class="footer-section">
-          <h4>Links Rápidos</h4>
+          <h4>Navegação</h4>
           <ul>
-            <li><a href="index.html">Início</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="servicos.html">Serviços</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="depoimentos.html">Depoimentos</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
             <li><a href="dicas.html">Dicas</a></li>
+            <li><a href="faq.html">Dúvidas</a></li>
           </ul>
         </div>
-
         <div class="footer-section">
           <h4>Contato</h4>
           <div class="contact-info">
-            <div class="contact-item">
-              <i class="fab fa-whatsapp"></i>
-              <span>(17) 98212-6171</span>
-            </div>
-            <div class="contact-item">
-              <i class="fas fa-envelope"></i>
-              <span>contato@personalbarretos.com</span>
-            </div>
-            <div class="contact-item">
-              <i class="fas fa-map-marker-alt"></i>
-              <span>Barretos, SP</span>
-            </div>
+            <p><i class="fas fa-map-marker-alt"></i> Barretos - SP</p>
+            <p><i class="fas fa-phone"></i> (17) 98212-6171</p>
+            <p><i class="fas fa-envelope"></i> guimateus001btos@gmail.com</p>
           </div>
         </div>
-
         <div class="footer-section">
-          <h4>Redes Sociais</h4>
-          <div class="social-links">
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a href="https://wa.me/5517982126171" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <h4>Horário de Atendimento</h4>
+          <div class="schedule">
+            <p>Segunda a Sexta: 06:00 - 22:00</p>
+            <p>Sábado: 08:00 - 18:00</p>
+            <p>Domingo: 08:00 - 12:00</p>
           </div>
         </div>
       </div>
-
       <div class="footer-bottom">
-        <p>&copy; 2025 Personal Trainer Guilherme Matheus. Todos os direitos reservados.</p>
-        <p>Desenvolvido por <a href="#" target="_blank">Sua Empresa</a></p>
+        <p>&copy; 2025 Guilherme Matheus Personal Trainer. Todos os direitos reservados.</p>
+        <p>Desenvolvido por <a href="https://gbconnect.digital" target="_blank">gbconnect.digital</a></p>
       </div>
     </div>
   </footer>
+
+  <!-- WhatsApp Float Button -->
+  <div class="whatsapp-float">
+    <a href="https://wa.me/5517982126171?text=Olá! Vim do site e gostaria de mais informações!" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+  </div>
 
   <script src="js/script.js"></script>
   <script src="js/faq.js"></script>
