fix header contact

--- a/contato.html
+++ b/contato.html
@@ -20,33 +20,25 @@
     <nav class="navbar">
       <div class="container">
         <div class="nav-brand">
-          <a href="index.html">
-            <img src="images/logo.png" alt="Personal Trainer Guilherme Matheus" class="logo">
-          </a>
+          <img src="images/logo.png" alt="Guilherme Matheus Personal Trainer" class="logo">
         </div>
-
-        <ul class="nav-menu">
-          <li><a href="index.html">Início</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="servicos.html">Serviços</a></li>
-          <li><a href="produtos.html">Produtos</a></li>
-          <li><a href="depoimentos.html">Depoimentos</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="dicas.html">Dicas</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-        </ul>
-
-        <div class="nav-actions">
-          <a href="https://wa.me/5517982126171?text=Olá! Gostaria de agendar uma consulta" class="whatsapp-btn"
-            target="_blank">
-            <i class="fab fa-whatsapp"></i>
-            WhatsApp
-          </a>
-          <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
+        <div class="nav-menu" id="nav-menu">
+          <ul class="nav-list">
+            <li><a href="index.html" class="nav-link">Início</a></li>
+            <li><a href="sobre.html" class="nav-link">Sobre</a></li>
+            <li><a href="servicos.html" class="nav-link">Serviços</a></li>
+            <li><a href="produtos.html" class="nav-link">Produtos</a></li>
+            <li><a href="#" class="nav-link">Depoimentos</a></li>
+            <li><a href="galeria.html" class="nav-link">Galeria</a></li>
+            <li><a href="dicas.html" class="nav-link">Dicas</a></li>
+            <li><a href="faq.html" class="nav-link active">FAQ</a></li>
+            <li><a href="contato.html" class="nav-link">Contato</a></li>
+          </ul>
+        </div>
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
       </div>
     </nav>
