--- a/produtos.html
+++ b/produtos.html
@@ -465,7 +465,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <img src="images/logo.png" alt="Guilherme Matheus" class="footer-logo">
+          <img src="images/logo1.png" alt="Guilherme Matheus" class="footer-logo">
           <p>Transformando vidas através do fitness. Treinos personalizados para hipertrofia e emagrecimento em
             Barretos-SP.</p>
           <div class="social-links">
