--- a/sobre.html
+++ b/sobre.html
@@ -188,7 +188,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <img src="images/logo.png" alt="Guilherme Matheus" class="footer-logo">
+          <img src="images/logo1.png" alt="Guilherme Matheus" class="footer-logo">
           <p>Transformando vidas através do movimento. Treinos que fortalecem corpo e mente, criando hábitos
             sustentáveis para uma
             vida mais saudável.</p>
