fix header and footer contact

--- a/contato.html
+++ b/contato.html
@@ -28,11 +28,11 @@
             <li><a href="sobre.html" class="nav-link">Sobre</a></li>
             <li><a href="servicos.html" class="nav-link">Serviços</a></li>
             <li><a href="produtos.html" class="nav-link">Produtos</a></li>
-            <li><a href="#" class="nav-link">Depoimentos</a></li>
+            <li><a href="depoimentos.html" class="nav-link">Depoimentos</a></li>
             <li><a href="galeria.html" class="nav-link">Galeria</a></li>
             <li><a href="dicas.html" class="nav-link">Dicas</a></li>
-            <li><a href="faq.html" class="nav-link active">FAQ</a></li>
-            <li><a href="contato.html" class="nav-link">Contato</a></li>
+            <li><a href="faq.html" class="nav-link">FAQ</a></li>
+            <li><a href="contato.html" class="nav-link active">Contato</a></li>
           </ul>
         </div>
         <div class="hamburger" id="hamburger">
@@ -43,6 +43,7 @@
       </div>
     </nav>
   </header>
+
 
   <!-- Contact Hero -->
   <section class="contact-hero">
@@ -445,82 +446,65 @@
       </div>
     </div>
   </div>
-
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <div class="footer-brand">
-            <img src="images/logo-white.png" alt="Guilherme Matheus Personal Trainer" class="footer-logo">
-            <p>Transformando vidas através do movimento em Barretos-SP</p>
-          </div>
+          <img src="images/logo1.png" alt="Guilherme Matheus" class="footer-logo">
+          <p>Transformando vidas através do fitness. Treinos personalizados para hipertrofia e emagrecimento em
+            Barretos-SP.</p>
           <div class="social-links">
-            <a href="https://instagram.com/guilhermematheus" target="_blank">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://wa.me/5517982126171" target="_blank">
-              <i class="fab fa-whatsapp"></i>
-            </a>
-            <a href="mailto:guilherme@gmail.com">
-              <i class="fas fa-envelope"></i>
-            </a>
+            <a href="https://instagram.com/personalgui_matheus" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://wa.me/5517982126171" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="mailto:guimateus001btos@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
           </div>
         </div>
-
         <div class="footer-section">
           <h4>Navegação</h4>
           <ul>
-            <li><a href="index.html">Início</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="servicos.html">Serviços</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
             <li><a href="depoimentos.html">Depoimentos</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
+            <li><a href="dicas.html">Dicas</a></li>
+            <li><a href="faq.html">Dúvidas</a></li>
           </ul>
         </div>
-
-        <div class="footer-section">
-          <h4>Serviços</h4>
-          <ul>
-            <li><a href="servicos.html#presencial">Personal Presencial</a></li>
-            <li><a href="servicos.html#online">Personal Online</a></li>
-            <li><a href="servicos.html#consultoria">Consultoria</a></li>
-            <li><a href="servicos.html#avaliacao">Avaliação Física</a></li>
-          </ul>
-        </div>
-
         <div class="footer-section">
           <h4>Contato</h4>
-          <div class="footer-contact">
-            <p>
-              <i class="fab fa-whatsapp"></i>
-              (17) 98212-6171
-            </p>
-            <p>
-              <i class="fas fa-envelope"></i>
-              guilherme@gmail.com
-            </p>
-            <p>
-              <i class="fas fa-map-marker-alt"></i>
-              Barretos - SP
-            </p>
+          <div class="contact-info">
+            <p><i class="fas fa-map-marker-alt"></i> Barretos - SP</p>
+            <p><i class="fas fa-phone"></i> (17) 98212-6171</p>
+            <p><i class="fas fa-envelope"></i> guimateus001btos@gmail.com</p>
+          </div>
+        </div>
+        <div class="footer-section">
+          <h4>Horário de Atendimento</h4>
+          <div class="schedule">
+            <p>Segunda a Sexta: 06:00 - 22:00</p>
+            <p>Sábado: 08:00 - 18:00</p>
+            <p>Domingo: 08:00 - 12:00</p>
           </div>
         </div>
       </div>
-
       <div class="footer-bottom">
         <p>&copy; 2025 Guilherme Matheus Personal Trainer. Todos os direitos reservados.</p>
+        <p>Desenvolvido por <a href="https://gbconnect.digital" target="_blank">gbconnect.digital</a></p>
       </div>
     </div>
   </footer>
 
-  <!-- WhatsApp Floating Button -->
-  <a href="https://wa.me/5517982126171?text=Olá! Vim através do site" class="whatsapp-float" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-    <span class="whatsapp-tooltip">Fale comigo no WhatsApp</span>
-  </a>
+  <!-- WhatsApp Float Button -->
+  <div class="whatsapp-float">
+    <a href="https://wa.me/5517982126171?text=Olá! Vim do site e gostaria de mais informações!" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+  </div>
 
   <script src="js/main.js"></script>
+  <script src="js/script.js"></script>
   <script src="js/contact.js"></script>
 </body>
 
