--- a/depoimentos.html
+++ b/depoimentos.html
@@ -28,7 +28,7 @@
             <li><a href="sobre.html" class="nav-link">Sobre</a></li>
             <li><a href="servicos.html" class="nav-link">Serviços</a></li>
             <li><a href="produtos.html" class="nav-link">Produtos</a></li>
-            <li><a href="#" class="nav-link active">Depoimentos</a></li>
+            <li><a href="depoimentos.html" class="nav-link active">Depoimentos</a></li>
             <li><a href="galeria.html" class="nav-link">Galeria</a></li>
             <li><a href="dicas.html" class="nav-link">Dicas</a></li>
             <li><a href="faq.html" class="nav-link">FAQ</a></li>
