--- a/produtos.html
+++ b/produtos.html
@@ -27,7 +27,7 @@
             <li><a href="index.html" class="nav-link">Início</a></li>
             <li><a href="sobre.html" class="nav-link">Sobre</a></li>
             <li><a href="servicos.html" class="nav-link">Serviços</a></li>
-            <li><a href="#" class="nav-link active">Produtos</a></li>
+            <li><a href="produtos.html" class="nav-link active">Produtos</a></li>
             <li><a href="depoimentos.html" class="nav-link">Depoimentos</a></li>
             <li><a href="galeria.html" class="nav-link">Galeria</a></li>
             <li><a href="dicas.html" class="nav-link">Dicas</a></li>
@@ -53,8 +53,7 @@
   </section>
 
   <!-- Products Section -->
-  <section class="products    <!-- Products Section -->
-    <section class=" products-section">
+  <section class="products products-section">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Loja Fitness</h2>
