--- a/servicos.html
+++ b/servicos.html
@@ -26,7 +26,7 @@
           <ul class="nav-list">
             <li><a href="index.html" class="nav-link">Início</a></li>
             <li><a href="sobre.html" class="nav-link">Sobre</a></li>
-            <li><a href="#" class="nav-link active">Serviços</a></li>
+            <li><a href="servicos.html" class="nav-link active">Serviços</a></li>
             <li><a href="produtos.html" class="nav-link">Produtos</a></li>
             <li><a href="depoimentos.html" class="nav-link">Depoimentos</a></li>
             <li><a href="galeria.html" class="nav-link">Galeria</a></li>
