--- a/sobre.html
+++ b/sobre.html
@@ -28,7 +28,7 @@
         <div class="nav-menu" id="nav-menu">
           <ul class="nav-list">
             <li><a href="index.html" class="nav-link">Início</a></li>
-            <li><a href="#" class="nav-link active">Sobre</a></li>
+            <li><a href="sobre.html" class="nav-link active">Sobre</a></li>
             <li><a href="servicos.html" class="nav-link">Serviços</a></li>
             <li><a href="produtos.html" class="nav-link">Produtos</a></li>
             <li><a href="depoimentos.html" class="nav-link">Depoimentos</a></li>
