fix redirect buttons

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         </div>
 
         <div class="hero-cta" role="group" aria-label="Ações principais">
-          <a class="btn btn-primary btn-large" href="#contato">Quero Minha Transformação</a>
-          <a class="btn btn-secondary btn-large" href="#servicos">Conhecer Serviços</a>
+          <a class="btn btn-primary btn-large" href="/contato.html">Quero Minha Transformação</a>
+          <a class="btn btn-secondary btn-large" href="/servicos.html">Conhecer Serviços</a>
         </div>
       </div>
     </div>
